RESOLVED KNOWAGE-2849: New widget in cockpit are created in the overflow side https://production.eng.it/jira/browse/KNOWAGE-2849

--- a/knowage/src/main/webapp/themes/commons/css/SASS/components/_cockpitEngine.scss
+++ b/knowage/src/main/webapp/themes/commons/css/SASS/components/_cockpitEngine.scss
@@ -28,7 +28,10 @@
     }
     
     
-    
+    cockpit-grid {
+    	width: calc( #{$cockpitWidth} - #{$menuBarWidth} );
+    }
+
 	cockpit-widget{
 		&>li{
 			&.fullScreenWidget{
